k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drone-detect-api
spec:
  selector:
    app: drone-detect-api
  ports:
    - name: http
      port: 80
      targetPort: http
